# snap

./: .gitignore  .travis.yml  ChangeLog.md  README.md  migrations.yaml  moo.cfg  package.yaml  snap-example.cabal  snap.cabal  snap.cabal.orig  stack.yaml
.circleci/: config.yml
app/: Main.hs
migrations/: gender.txt  initial.txt
snaplets/heist/templates/: base.tpl  password_form.tpl  user_form.tpl  users.tpl  users_add.tpl  users_edit.tpl  users_edit_successful.tpl  welcome.tpl
snaplets/persist/: devel.cfg
snaplets/postgresql-simple/: devel.cfg
src/: Application.hs  DataBaseInfo.hs  Database.hs  EnvRead.hs  IoInteractions.hs  Routes.hs  Site.hs
src/Model/: SnapUser.hs  User.hs
src/User/: ErrorMessages.hs  Forms.hs  Handler.hs  Handlers.hs  Persistence.hs  Presenters.hs  Queries.hs  Query.hs  Splices.hs  Types.hs  Validations.hs
src/Utils/: Database.hs  Web.hs
static/: api.js
test/: SiteSpec.hs  UserJsonSpec.hs  UserPresenterSpec.hs  UserQueriesSpec.hs  UserValidationsSpec.hs
