Name:                snap
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/kinorius123/snap

library
  exposed-modules:
      Lib
  other-modules:
      Paths_snap
  hs-source-dirs:
      src
  build-depends:
    base >=4.7 && <5
  default-language: Haskell2010

executable snap-exe
  main-is: Main.hs
  other-modules:
      Paths_snap
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , snap
    , bytestring >= 0.9.1 && < 0.11
    , mtl >= 2 && < 3
    , snap-core >= 1.0 && < 1.1
    , snap-server >= 1.0 && < 1.1
  default-language: Haskell2010

test-suite snap-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_snap
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , snap
  default-language: Haskell2010
